linting and deprecations